@@ -1,3 +1,8 @@
+2006-04-10  Martin Hunt  <hunt@redhat.com>
+
+	* procfs.c (_stp_write): More fixes because buffers
+	are no longer null-terminated.
+
 2006-03-20  Martin Hunt  <hunt@redhat.com>
 
 	* procfs.c (_stp_write): Combine buffers only for REALTIME_DATA.
